Photoalbum tests introduced and some fixed.